Make sure that the buttons actually align on the counters

--- a/src/app/character-sheet/custom-counter/counter.component.scss
+++ b/src/app/character-sheet/custom-counter/counter.component.scss
@@ -1,5 +1,6 @@
 .counter-label {
   text-align: center;
+  width: 50px;
 }
 
 .counter-container {
